objects/Holiday__c/Holiday__c.object-meta.xml
<CustomObject>
    <label>Holiday</label>
    <nameField>
        <label>Holidays Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Holidays</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>