objects/Holiday__c/fields/Holiday__c.field-meta.xml
<CustomField>
    <fullName>Holiday__c</fullName>
    <description>No longer needed, use Holiday Name Map field instead</description>
    <label>Holiday</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Holiday_List</valueSetName>
    </valueSet>
</CustomField>