objects/Holiday__c/fields/Holiday_Name_Map__c.field-meta.xml
<CustomField>
    <fullName>Holiday_Name_Map__c</fullName>
    <label>Holiday Name Map</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Holiday_List</valueSetName>
    </valueSet>
</CustomField>