objects/Holiday__c/fields/Show_Holiday_Rate__c.field-meta.xml
<CustomField>
    <fullName>Show_Holiday_Rate__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show Holiday Rate</label>
    <type>Checkbox</type>
</CustomField>