objects/Holiday__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Holiday_Name_Map__c</columns>
    <columns>Holiday__c</columns>
    <columns>Date__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>