objects/Holiday__c/listViews/X2019_Holidays.listView-meta.xml
<ListView>
    <fullName>X2019_Holidays</fullName>
    <columns>NAME</columns>
    <columns>Holiday_Name_Map__c</columns>
    <columns>Holiday__c</columns>
    <columns>Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date__c</field>
        <operation>lessOrEqual</operation>
        <value>12/30/2019</value>
    </filters>
    <label>2019 Holidays</label>
</ListView>