objects/Holiday__c/listViews/X2020_Holidays.listView-meta.xml
<ListView>
    <fullName>X2020_Holidays</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Holiday_Name_Map__c</columns>
    <columns>Holiday__c</columns>
    <columns>Date__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2020</value>
    </filters>
    <filters>
        <field>Date__c</field>
        <operation>lessOrEqual</operation>
        <value>12/31/2020</value>
    </filters>
    <label>2020 Holidays</label>
</ListView>