objects/Holiday__c/listViews/X2022_Holidays.listView-meta.xml
<ListView>
    <fullName>X2022_Holidays</fullName>
    <columns>NAME</columns>
    <columns>Holiday_Name_Map__c</columns>
    <columns>Holiday__c</columns>
    <columns>Date__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date__c</field>
        <operation>greaterThan</operation>
        <value>12/31/2021</value>
    </filters>
    <filters>
        <field>Date__c</field>
        <operation>lessThan</operation>
        <value>1/1/2023</value>
    </filters>
    <label>2022 Holidays</label>
</ListView>