objects/Holiday__c/listViews/X2023_Holidays.listView-meta.xml
<ListView>
    <fullName>X2023_Holidays</fullName>
    <columns>NAME</columns>
    <columns>Holiday_Name_Map__c</columns>
    <columns>Holiday__c</columns>
    <columns>Date__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date__c</field>
        <operation>greaterThan</operation>
        <value>12/31/2022</value>
    </filters>
    <filters>
        <field>Date__c</field>
        <operation>lessThan</operation>
        <value>1/2/2024</value>
    </filters>
    <label>2023 Holidays</label>
</ListView>